--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=numberma_makan
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=numberma_makan
+DB_PASSWORD=6W2agydmZETrQaG
 # DB_USERNAME=root
 # DB_PASSWORD=
 DB_STRICT=false
