--- a/.env
+++ b/.env
@@ -20,12 +20,12 @@ REDIS_PORT=6379
 # Change to your database credential
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=numberma_makan
-DB_USERNAME=numberma_makan
-DB_PASSWORD=6W2agydmZETrQaG
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PORT=3306
+# DB_DATABASE=numberma_makan
+DB_USERNAME=numbermaka_makanpkuser
+DB_PASSWORD=L=^~F6y?_Yh?
+DB_USERNAME=root
+DB_PASSWORD=
 DB_STRICT=false
 
 # Mail configs
