--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ REDIS_PORT=6379
 DB_CONNECTION=mysql
 DB_HOST=localhost
 # DB_PORT=3306
-# DB_DATABASE=numberma_makan
+DB_DATABASE=numbermaka_makanpk
 DB_USERNAME=numbermaka_makanpkuser
 DB_PASSWORD=L=^~F6y?_Yh?
 DB_USERNAME=root
