--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ DB_HOST=localhost
 DB_DATABASE=numbermaka_makanpk
 DB_USERNAME=numbermaka_makanpkuser
 DB_PASSWORD=L=^~F6y?_Yh?
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_USERNAME=root
+# DB_PASSWORD=
 DB_STRICT=false
 
 # Mail configs
