--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Makanumber"
 # Disable debug mode by changing APP_DEBUG=false when your site is ready for live.
-APP_DEBUG=true
-APP_ENV=true
+APP_DEBUG=false
+APP_ENV=Production
 # Must to change APP_URL to your website URL. Example: APP_URL=http://your-domain.com
 APP_URL=http://localhost
 APP_KEY=base64:ahimIiG674yV4DkPWx6f7t9dkMmTFK2S+0lCPglpVfs=
