--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="Makanumber"
 # Disable debug mode by changing APP_DEBUG=false when your site is ready for live.
-APP_DEBUG=true
+APP_DEBUG=false
 APP_ENV=true
 # Must to change APP_URL to your website URL. Example: APP_URL=http://your-domain.com
 APP_URL=http://localhost
